# schema-drift

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
demo/: demo.tape
examples/: orders_v1.json  orders_v2_safe.json  orders_v3_breaking.json
schemadrift/: __init__.py  cli.py  core.py
tests/: test_core.py
